syntax = "proto3";

package pb;

option go_package = "./pb";

import "pb/user.proto";


service VideoService{

  rpc Feed(FeedReq) returns (FeedRes);

  rpc Publish(PublishReq) returns (PublishRes);

  rpc PublishList(PublishListReq) returns (PublishListRes);

  rpc Favorite(FavoriteReq) returns (FavoriteRes);

  rpc FavoriteList(FavoriteListReq) returns (FavoriteListRes);

  rpc Comment(CommentReq) returns (CommentRes);

  rpc CommentList(CommentListReq) returns (CommentListRes);
}

message FeedReq {
  int64 latest_time = 1; //可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填当前时间
  string token = 2;//可选参数，登录用户设置
}
message FeedRes {
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  repeated Video video_list = 3; //视频列表
  int64 next_time = 4;//本次返回的视频中，发布最早的时间，作为下次请求时的Late
}
message Video {
  int64 id = 1;//视频唯—标识
  User author = 2;//视频作者信息
  string play_url = 3; //视频播放地址
  string cover_url = 4; //视频封面地址
  int64 favorite_count = 5;//视频的点赞总数
  int64 comment_count = 6;//视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8;//视频标题
}

message PublishReq {
  string token = 1;//用户鉴权token
  bytes data = 2;//视频数据
  string title = 3;//视频标题

  uint64 userId = 4;
  string filename=5;
  

}
message PublishRes {
  int32 status_code = 1; //状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
}

message PublishListReq {
  int64 user_id = 1;//用户id
  string token = 2;//用户鉴权token
}
message PublishListRes {
  int32 status_code = 1;//状态码，8-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  repeated Video video_list = 3;//用户发布的视频列表
}

message FavoriteReq{
  int64 user_id = 1;//用户id
  string token = 2;//用户鉴权token
  int64 video_id = 3;//视频id
  int32 action_type = 4; // 1-点赞，2-取消点赞
}
message FavoriteRes{
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
}

message FavoriteListReq{
  int64 user_id = 1;//用户id
  string token = 2;//用户鉴权token
}
message FavoriteListRes {
  int32 status_code = 1;//状态码，8-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  repeated Video video_list = 3;//用户点赞视频列表
}

message CommentReq {
  int64 user_id = 1;//用户id
  string token = 2;//用户鉴权token
  int64 video_id = 3;//视频id
  int32 action_type = 4; // 1-发布评论，2-删除评论
  string comment_text = 5; //用户填写的评论内容，在action_type=1的时候使用
  int64 comment_id = 6;//要删除的评论id，在action_type=2的时候使用
}
message CommentRes {
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  Comment comment = 3;//评论成功返回评论内容，不需要重新拉取整个列表
}
message Comment {
  int64 id = 1;//视频评论id
  User user = 2;//评论用户信息
  string content = 3;//评论内容
  string create_date = 4;//评论发布日期，格式 mm-dd}
}

message CommentListReq {
  string token = 1;//用户鉴权token
  int64 video_id = 2;//视频id
}
message CommentListRes {
  int32 status_code = 1;//状态码，日-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  repeated Comment comment_list = 3;//评论列表
}











